// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a plural message for multiple expenses 1`] = `
<div>
  <h2>
    Viewing 
    3
     
    expenses
     totalling 
    $150.00
  </h2>
</div>
`;

exports[`should render a singular message for single expense 1`] = `
<div>
  <h2>
    Viewing 
    1
     
    expense
     totalling 
    $50.00
  </h2>
</div>
`;
